@@ -4,6 +4,7 @@
 	* Dump log: show same information on final dump as wizard mode
 	* Minotaurs respect Elbereth
 	* Bones level tracking
+	* Conduct: Racial armor tracking
 
 	* new dungeon features:
 	  - muddy swamp (from NetHack Brass)
